change product-list to container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-topheader></app-topheader>
 <app-header></app-header>
-<app-product-list></app-product-list>
+<app-container></app-container>
 <app-users></app-users>
