--- a/src/app/header/main-menu/main-menu.component.html
+++ b/src/app/header/main-menu/main-menu.component.html
@@ -1,6 +1,5 @@
 <div class="ekart-menu">
-    <a href="#">Home</a>
-    <a href="#">Products</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
+   <a *ngFor="let menu of maniMenuItem" class="">
+{{menu}}
+</a>
 </div>
