--- a/src/app/container/product-list/product-list.component.html
+++ b/src/app/container/product-list/product-list.component.html
@@ -4,8 +4,9 @@
        <div class="ekart-add-to-wishlist">
            <i class="fa fa-heart-o" aria-hidden="true"></i>
        </div>
-       <div class="ekart-on-sale-tag">75% OFF</div>
-   </div>
+       <div class="ekart-on-sale-tag" *ngIf="product.discount">{{(100-(product.discount/product.price*100)).toFixed(0)}}%off</div>
+    </div>
+ 
    <div class="ekart-product-image">
        <img [src]="product.imageURL" alt="" class="ekart-product-image">
    </div>
@@ -15,5 +16,6 @@
    <div class="ekart-product-name">{{product.name}}</div>
    <div class="ekart-product-catagory">{{product.gender}} . {{product.category}} . {{product.brand}}</div>
    <div class="ekart-product-available-colors">${{product.color.length}} Colors. Best Seller</div>
+   <div class="ekart--product--in--stock" [ngStyle]="{fontWeight: 'bold', color: product.is_in_inventory ? 'green' : 'red'} ">{{product.is_in_inventory ? 'Available in Stock' : 'Not Available'}}</div>
    </div>
    </div>
